--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
     <div class="menu-toggle" id="menu-toggle">☰</div>
     <nav>
@@ -22,12 +21,20 @@
   <script>
     const menuToggle = document.getElementById('menu-toggle');
     const navMenu = document.querySelector('nav ul');
+    const menuLinks = document.querySelectorAll('nav ul li a');
   
+    // Εναλλαγή εμφάνισης όταν πατάς ☰
     menuToggle.addEventListener('click', () => {
       navMenu.classList.toggle('show');
     });
-  </script>
   
+    // Κλείσιμο μενού όταν επιλέγεις ένα link
+    menuLinks.forEach(link => {
+      link.addEventListener('click', () => {
+        navMenu.classList.remove('show');
+      });
+    });
+  </script>  
   <section class="hero" id="home">
     <div class="content">
         <div class="content-box">
@@ -39,7 +46,23 @@
         </div>
       </div>      
   </section>
-
+  <section id="projects">
+    <h2>Τα έργα μας</h2>
+  
+    <div class="project-container">
+      <button class="scroll-btn left" id="scroll-left">◀</button>
+  
+      <div class="project-gallery" id="project-gallery">
+        <div class="project-item">
+          <img src="images/kthrio2.jpg" alt="Έργο 1">
+          <p>Ανακαίνιση διαμερίσματος στην Αθήνα</p>
+        </div>
+        <div class="project-item">
+          <img src="images/kthrio3.jpg" alt="Έργο 2">
+          <p>Κατασκευή πολυκατοικίας στο Περιστέρι</p>
+      <button class="scroll-btn right" id="scroll-right">▶</button>
+    </div>
+  </section>
   <section id="services">
     <h2>Υπηρεσίες</h2>
     <p>Αναλαμβάνουμε ανέγερση πολυκατοικιών, ανακαινίσεις, και κατασκευές επαγγελματικών χώρων.</p>
@@ -55,7 +78,6 @@
     </p>
   </section>
   
-
   <section id="quote">
     <h2>Ζήτηση Προσφοράς</h2>
     <form action="https://formspree.io/f/manoaqel" method="POST">
@@ -88,6 +110,19 @@
       <button type="submit">Αποστολή</button>
     </form>
   </section>
-
+  <script>
+    const scrollContainer = document.getElementById('project-gallery');
+    const scrollLeftBtn = document.getElementById('scroll-left');
+    const scrollRightBtn = document.getElementById('scroll-right');
+  
+    scrollLeftBtn.addEventListener('click', () => {
+      scrollContainer.scrollBy({ left: -320, behavior: 'smooth' });
+    });
+  
+    scrollRightBtn.addEventListener('click', () => {
+      scrollContainer.scrollBy({ left: 320, behavior: 'smooth' });
+    });
+  </script>  
+  </script>  
 </body>
 </html>
