--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Rroku Construction</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Lightbox2 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -46,22 +48,35 @@
         </div>
       </div>      
   </section>
+  <section id="about">
+    <h2>Σχετικά με εμάς</h2>
+    <p>
+      Η Rroku Construction ιδρύθηκε με στόχο την παροχή αξιόπιστων και καινοτόμων λύσεων στον τομέα των κατασκευών. Με εμπειρία πολλών ετών και εξειδικευμένο προσωπικό, δημιουργούμε έργα υψηλής αισθητικής και αντοχής.
+    </p>
+  </section>  
   <section id="projects">
     <h2>Τα έργα μας</h2>
-  
     <div class="project-container">
       <button class="scroll-btn left" id="scroll-left">◀</button>
-  
+    
       <div class="project-gallery" id="project-gallery">
         <div class="project-item">
-          <img src="images/kthrio1.jpg" alt="Έργο 1">
+          <a href="images/kthrio1.jpg" data-lightbox="projects" data-title="Ανακαίνιση διαμερίσματος στην Αθήνα">
+            <img src="images/kthrio1.jpg" alt="Έργο 1">
+          </a>
           <p>Ανακαίνιση διαμερίσματος στην Αθήνα</p>
         </div>
         <div class="project-item">
-          <img src="images/kthrio2.jpg" alt="Έργο 2">
+          <a href="images/kthrio2.jpg" data-lightbox="projects" data-title="Κατασκευή πολυκατοικίας στο Περιστέρι">
+            <img src="images/kthrio2.jpg" alt="Έργο 2">
+          </a>
           <p>Κατασκευή πολυκατοικίας στο Περιστέρι</p>
+        </div>
+        <!-- Προσθέτεις και άλλες εικόνες εδώ αν θέλεις -->
+      </div>
+    
       <button class="scroll-btn right" id="scroll-right">▶</button>
-    </div>
+    </div>    
   </section>
   <section id="services">
     <h2>Υπηρεσίες</h2>
@@ -115,6 +130,12 @@
     const scrollLeftBtn = document.getElementById('scroll-left');
     const scrollRightBtn = document.getElementById('scroll-right');
   
+    function updateButtons() {
+      const maxScrollLeft = scrollContainer.scrollWidth - scrollContainer.clientWidth;
+      scrollLeftBtn.style.display = scrollContainer.scrollLeft > 0 ? "block" : "none";
+      scrollRightBtn.style.display = scrollContainer.scrollLeft < maxScrollLeft ? "block" : "none";
+    }
+  
     scrollLeftBtn.addEventListener('click', () => {
       scrollContainer.scrollBy({ left: -320, behavior: 'smooth' });
     });
@@ -122,7 +143,11 @@
     scrollRightBtn.addEventListener('click', () => {
       scrollContainer.scrollBy({ left: 320, behavior: 'smooth' });
     });
-  </script>  
-  </script>  
+  
+    scrollContainer.addEventListener('scroll', updateButtons);
+    window.addEventListener('load', updateButtons);
+  </script>   
+  <!-- Lightbox2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
